tests/multiubuntu/test-cases/TC_20/TC_20_egress_after_db_status_check_dns_ip_mapping.json
[{
  "time": "2021-03-01T11:49:49.967400638Z",
  "verdict": "FORWARDED",
  "IP": {
    "source": "10.12.2.35",
    "destination": "143.248.36.38",
    "ipVersion": "IPv4"
  },
  "l4": {
    "TCP": {
      "source_port": 8080,
      "destination_port": 8000
    }
  },
  "source": {
    "ID": 1103,
    "identity": 4262,
    "namespace": "multiubuntu",
    "labels": [
      "k8s:container=ubuntu-3",
      "k8s:group=group-1"
    ],
    "pod_name": "ubuntu-3-deployment-6c57bbb46f-ggbl6"
  },
  "destination": {
    "identity": 2,
    "labels": [
      "reserved:world"
    ]
  },
  "Type": "L7",
  "node_name": "gke-darkload-darkload-nodepool-b53fdd70-vyaa",
  "l7": {
    "type": "REQUEST",
    "dns": {
      "query": "seungsoo.net.",
      "observation_source": "proxy",
      "qtypes": [
        "A"
      ]
    }
  },
  "event_type": {
    "type": 129
  },
  "traffic_direction": "EGRESS",
  "Summary": "DNS Query seungsoo.net. A"
}, {
  "time": "2021-03-01T11:49:49.967979587Z",
  "verdict": "FORWARDED",
  "IP": {
    "source": "10.12.3.155",
    "destination": "143.248.36.38",
    "ipVersion": "IPv4"
  },
  "l4": {
    "TCP": {
      "source_port": 8080,
      "destination_port": 8000
    }
  },
  "source": {
    "ID": 1103,
    "identity": 4262,
    "namespace": "multiubuntu",
    "labels": [
      "k8s:container=ubuntu-3",
      "k8s:group=group-1"
    ],
    "pod_name": "ubuntu-3-deployment-6c57bbb46f-ggbl6"
  },
  "destination": {
    "identity": 2,
    "labels": [
      "reserved:world"
    ]
  },
  "Type": "L7",
  "node_name": "gke-darkload-darkload-nodepool-b53fdd70-vyaa",
  "l7": {
    "type": "RESPONSE",
    "dns": {
      "query": "seungsoo.net.",
      "ips": [
        "143.248.36.38"
      ],
      "ttl": 1739,
      "observation_source": "proxy",
      "qtypes": [
        "A"
      ],
      "rrtypes": [
        "A"
      ]
    }
  },
  "reply": true,
  "event_type": {
    "type": 129
  },
  "traffic_direction": "EGRESS",
  "Summary": "DNS Answer \"143.248.36.38\" TTL: 1256 (Proxy seungsoo.net. A)"
}]
